--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,12 @@
 name: build
 
+env:
+#  IMAGE_TAG: ${{ github.ref_name }}
+  IMAGE_TAG: ${{ github.sha }}
+  ECR_REGISTRY: 940226765273.dkr.ecr.eu-west-1.amazonaws.com
+  ECR_REPOSITORY: ct-backstage
+
+
 on:
   push:
     paths:
@@ -21,12 +28,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: printenv
+        shell: bash
+        run: printenv
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.ACTION_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.ACTION_AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
 
       - name: Login to AWS ECR
         uses: aws-actions/amazon-ecr-login@v1
@@ -60,19 +70,13 @@ jobs:
       - run: yarn build
 
       - name: Docker Build
-        env:
-          IMAGE_NAME: 940226765273.dkr.ecr.eu-west-1.amazonaws.com/ct-backstage
-          TAG: ${{ github.ref_name }}
         run: |
-          docker build -t ${IMAGE_NAME}:latest .
-          docker tag ${IMAGE_NAME}:latest ${IMAGE_NAME}:${TAG}
+          docker build -t ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest .
+          docker tag ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
+
       - name: Docker Push
-        env:
-          IMAGE_NAME: 940226765273.dkr.ecr.eu-west-1.amazonaws.com/ct-backstage
-          TAG: ${{ github.ref_name }}
         run: |
-          docker push ${IMAGE_NAME}:latest
-          docker push ${IMAGE_NAME}:${TAG}
+          docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}
 
       # Clean-up
       - name: Uninstall Yarn
