--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,11 +1,11 @@
 name: build
 
 env:
-#  IMAGE_TAG: ${{ github.ref_name }}
-  IMAGE_TAG: ${{ github.sha }}
-  ECR_REGISTRY: 940226765273.dkr.ecr.eu-west-1.amazonaws.com
   ECR_REPOSITORY: ct-backstage
-
+  IMAGE_TAG: ${{ github.sha }}
+  ECR_REGISTRY_ID: 940226765273
+  ECR_REGISTRY: 940226765273.dkr.ecr.eu-west-1.amazonaws.com
+  AWS_REGION: eu-west-1
 
 on:
   push:
@@ -14,7 +14,6 @@ on:
       - .github/workflows/backstage.yaml
     branches:
       - 'master'
-      - 'ARCH-322-deploy-backstage'
   pull_request:
     paths:
       - Dockerfile
@@ -28,21 +27,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: printenv
-        shell: bash
-        run: printenv
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.ACTION_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.ACTION_AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
+          aws-region: ${AWS_REGION}
 
       - name: Login to AWS ECR
         uses: aws-actions/amazon-ecr-login@v1
         with:
-          registries: '940226765273'
+          registries: ${ECR_REGISTRY_ID}
           skip-logout: true
 
       - uses: actions/checkout@v2
@@ -61,23 +56,24 @@ jobs:
           cache: yarn
 
       - name: Versions check
-        run: node -v
-      - run: npm -v
-      - run: yarn -v
+        run: |
+          node -v
+          npm -v
+          yarn -v
 
-      - name: Yarn prepare
-        run: yarn install --frozen-lockfile
-      - run: NODE_OPTIONS=--max_old_space_size=4096 yarn tsc
-      - run: yarn build
+      - name: Yarn prepare app packages
+        run: |
+          yarn install --frozen-lockfile
+          NODE_OPTIONS=--max_old_space_size=4096 yarn tsc
+          yarn build
 
-      - name: Docker Build
+      - name: Docker Build'n'Tag
         run: |
           docker build -t ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest .
           docker tag ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
 
       - name: Docker Push
-        run: |
-          docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}
+        run: docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}
 
       # Clean-up
       - name: Uninstall Yarn
