--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -73,7 +73,7 @@ jobs:
         run: |
           docker build -t ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest .
           docker tag ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest ${ECR_REGISTRY}/${ECR_REPOSITORY}:${GITHUB_SHA}
-          docker tag ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest ${ECR_REGISTRY}/${ECR_REPOSITORY}:${GITHUB_REF_NAME}
+          docker tag ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest ${ECR_REGISTRY}/${ECR_REPOSITORY}:${GITHUB_HEAD_REF}
 
       - name: Docker Push
         run: docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}
