--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,7 +72,7 @@ jobs:
       - name: Docker Build'n'Tag
         run: |
           docker build -t ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest .
-          docker tag ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest ${ECR_REGISTRY}/${ECR_REPOSITORY}:${GITHUB_SHA_SHORT}
+          docker tag ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest ${ECR_REGISTRY}/${ECR_REPOSITORY}:${GITHUB_SHA::7}
 
       - name: Docker Push
         run: docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}
